push aprés realisation du front Daylicarte, Cartepb, Regles Userstories

--- a/testauthentification/Front/src/app/component/Menu/navbar/navbar.component.html
+++ b/testauthentification/Front/src/app/component/Menu/navbar/navbar.component.html
@@ -3,11 +3,11 @@
     <ul>
         
         <li> <a routerLinkActive='active' routerLink='/daylicarte'> Daylicarte </a>  </li>  
-        <li> <a routerLinkActive='active' routerLink='/accueil'> CarteRevue</a>  </li>
+        <li> <a routerLinkActive='active' routerLink='/revuecarte'> CarteRevue</a>  </li>
         <li> <a routerLinkActive='active' routerLink='/pbcarte'> CartePb</a>  </li>  
         <li> <a routerLinkActive='active' routerLink='/accueil'> Role</a>  </li> 
-        <li> <a routerLinkActive='active' routerLink='/accueil'> Regles</a>  </li>  
-        <li> <a routerLinkActive='active' routerLink='/accueil'> Userstories</a>  </li> 
+        <li> <a routerLinkActive='active' routerLink='/regles'> Regles</a>  </li>  
+        <li> <a routerLinkActive='active' routerLink='/choix'> Userstories</a>  </li> 
      
         
     </ul>
