--- a/testauthentification/Front/src/app/component/Pbcarte/pbcarte-create/pbcarte-create.component.css
+++ b/testauthentification/Front/src/app/component/Pbcarte/pbcarte-create/pbcarte-create.component.css
@@ -1,8 +1,22 @@
 .container{
     margin-bottom:16%
 }
-textarea{
+form{margin-left:1%;margin-right: 10%;}
+textarea,input{
     width: 100%;
     height: 18em;
-    
+    color:white;   
 }
+.btn2 {
+    background-color: rgb(251, 173, 37);
+    color: black;
+    padding: 7px 20px;
+    margin-bottom: 10%;
+   
+    border-radius: 1px;
+    height: 2em;
+    width: 10em;
+  }
+  h2{
+      font-size:2em;
+  }
