--- a/testauthentification/Front/src/app/component/Pbcarte/pbcarte-create/pbcarte-create.component.html
+++ b/testauthentification/Front/src/app/component/Pbcarte/pbcarte-create/pbcarte-create.component.html
@@ -1,9 +1,10 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <h1>Creer une nouvelle carte Pb</h1>
+   
   
-    <a href="#" routerLink="/pbcarte" class="btn btn-primary">Accueil</a>
+    <a href="#" routerLink="/pbcarte" class="btn2">Accueil</a>
         
+     <h2>Creer une nouvelle carte Pb</h2>
     <form [formGroup]="form" (ngSubmit)="submit()">
   
         <div class="form-group">
