commit aprés ajout role , regles, daylicarte, pb: modif role empeche la connexiongit add .!

--- a/testauthentification/Front/src/app/component/Regles/regles-create/regles-create.component.html
+++ b/testauthentification/Front/src/app/component/Regles/regles-create/regles-create.component.html
@@ -1,1 +1,72 @@
-<p>regles-create works!</p>
+<app-navbar></app-navbar>
+<div class="container">
+   
+  
+    <a href="#" routerLink="/regles" class="btn2">Accueil</a>
+        
+     <h2>Creer une nouvelle carte Pb</h2>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+  
+        <div class="form-group">
+            <label for="titre">titre:</label>
+            <input 
+                formControlName="titre"
+                id="titre" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="f.titre.touched && f.titre.invalid" class="alert alert-danger">
+                <div *ngIf="f.titre.errors?.required">titre is required.</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="titre">image (terminaison:xxx.png, xxx.jpg,etc...):</label>
+            <input 
+                formControlName="img"
+                id="img" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="f.img.touched && f.img.invalid" class="alert alert-danger">
+                <div *ngIf="f.img.errors?.required">img is required.</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="titre">video (terminaison:xxx.mp4, xxx.jpg,etc...):</label>
+            <input 
+                formControlName="video"
+                id="video" 
+                type="text" 
+                class="form-control">
+            <div *ngIf="f.video.touched && f.video.invalid" class="alert alert-danger">
+                <div *ngIf="f.video.errors?.required">video is required.</div>
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <label for="body">contenu</label>
+            <textarea 
+                formControlName="contenu"
+                id="body" 
+                type="text" 
+                class="form-control">
+            </textarea>
+            <div *ngIf="f.contenu.touched && f.contenu.invalid" class="alert alert-danger">
+                <div *ngIf="f.contenu.errors?.required">contenu is required.</div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="body">Résumé(texte court 5 lignes max)</label>
+            <textarea 
+                formControlName="texte"
+                id="texte" 
+                type="text" 
+                class="form-control">
+            </textarea>
+            <div *ngIf="f.texte.touched && f.texte.invalid" class="alert alert-danger">
+                <div *ngIf="f.texte.errors?.required">texte is required.</div>
+            </div>
+        </div>
+  
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+    </form>
+</div>
+<app-footer></app-footer>
