--- a/testauthentification/Front/src/app/component/Userstories/userstories1/userstories1.component.html
+++ b/testauthentification/Front/src/app/component/Userstories/userstories1/userstories1.component.html
@@ -21,7 +21,7 @@
         <td>{{ userstorie.id }}</td>
         <td>{{ userstorie.titre }}</td>
         <td>{{ userstorie.contenu }}</td>
-        <td>{{ userstorie.img }}</td>
+        <td> <img src='./assets/img/userstorie1.jpg'> <br>{{ userstorie.img }}</td>
         <td>{{ userstorie.Dependance }}</td>
         <td>{{ userstorie.dposition }}</td>
         <td>{{ userstorie.taille }}/{{userstorie.value}}</td>
