--- a/testauthentification/Front/src/app/component/daylicarte/index/index.component.css
+++ b/testauthentification/Front/src/app/component/daylicarte/index/index.component.css
@@ -1,33 +1,123 @@
 h1 {
   text-align: center;
+  margin-bottom: 2%;
 }
-h2{font-size: x-large;
-text-align: center;}
 
-.card {
+.container {
+  width: 100%;
+  
+  margin-left: 10%;
+}
+.container2{
+  width: 30%;
+  margin-top:2%;
+}
+
+.table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-left: 1%;
+}
+
+.table td,
+.table th {
+  border: 1px solid #2b2d31;
+  padding: 8px;
+}
+
+.table tr {
   background-color: transparent;
+  margin-top: 2%;
+}
+
+#table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+
+.container {
+  margin-bottom: 5%;
 }
 
 .btn {
   background-color: rgb(77, 200, 52);
+  /* Green */
+  border: none;
   color: white;
-  padding: 20px 75px;
-  margin-top: 10%;
-  border-radius: 50px;
-  height: 5em;
-  width: 15em;
+  padding: 2px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: auto;
 }
 
-input {
-  color:white;
-}
-/* .btn2 {
+.btn2 {
   background-color: rgb(251, 173, 37);
+  /* Green */
+  border: none;
+  color: white;
+  padding: 2px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: auto;
+  margin-top: 5%;
+}
+
+/* .btn {
+    background-color: rgb(77, 200, 52);
+    color: white;
+    padding: 2px 25px;
+    margin-top: 2%;
+    border-radius: 10px;
+    height: 2.5em;
+    width: 10em;
+  }
+ 
+   */
+
+/* .btn2 {
+    background-color: rgb(251, 173, 37);
+    color: black;
+    padding: 7px 20px;
+    margin-bottom: 0%;
+   
+    border-radius: 1px;
+    height: 2em;
+    width: 10em;
+  } */
+a {
+  text-decoration: none;
+  margin-bottom: 5%;
+  margin-left: 10%;
+}
+
+.btn3 {
+  background-color: #FAF5BC;
   color: black;
+  margin-left: 0;
   padding: 25px 75px;
   margin-top: 10%;
-  margin-right: 2%;
   border-radius: 50px;
   height: 5em;
-  width: 15em;
-} */
+
+}
+
+.btn4 {
+  background-color: #202525;
+
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 85%;
+  border-radius: 12px;
+  padding: 0.2em 1.0em;
+  color: white;
+  cursor: pointer;
+}
