--- a/testauthentification/Front/src/app/component/Menu/navbar/navbar.component.html
+++ b/testauthentification/Front/src/app/component/Menu/navbar/navbar.component.html
@@ -1,11 +1,12 @@
 <nav >
-    <img routerLinkActive='active' routerLink="/accueil" src="./assets/img/logo_scrumble.png" alt="">
+    <a routerLinkActive='active' routerLink='/accueil'>
+    <img routerLinkActive='active' routerLink="" src="./assets/img/logo_scrumble.png" alt=""></a>
     <ul>
         
         <li> <a routerLinkActive='active' routerLink='/daylicarte'> Daylicarte </a>  </li>  
         <li> <a routerLinkActive='active' routerLink='/revuecarte'> CarteRevue</a>  </li>
         <li> <a routerLinkActive='active' routerLink='/pbcarte'> CartePb</a>  </li>  
-        <li> <a routerLinkActive='active' routerLink='/accueil'> Role</a>  </li> 
+        <li> <a routerLinkActive='active' routerLink='/role'> Role</a>  </li> 
         <li> <a routerLinkActive='active' routerLink='/regles'> Regles</a>  </li>  
         <li> <a routerLinkActive='active' routerLink='/choix'> Userstories</a>  </li> 
      
