--- a/testauthentification/Front/src/app/component/Regles/regles-index/regles-index.component.css
+++ b/testauthentification/Front/src/app/component/Regles/regles-index/regles-index.component.css
@@ -2,15 +2,11 @@ h1 {
     text-align: center;
     margin-bottom: 2%;
   }
-  
-  .container {
-    width: 100%;
-    
-    margin-left: 10%;
-  }
-  .container2{
-    width: 30%;
+  .container{ 
+      margin-left: 10%;
+    width: 90%;
     margin-top:2%;
+    margin-bottom: 5%;
   }
   
   .table {
@@ -18,16 +14,20 @@ h1 {
     width: 100%;
     margin-left: 1%;
   }
-  
+  .table >.cadretitre{
+      border-bottom: solid 3px white;
+  }
+  .cadretitre{border-bottom:solid 5px white;}
   .table td,
   .table th {
     border: 1px solid #2b2d31;
     padding: 8px;
   }
-  
+  .cadreinfo{border-bottom:solid 5px white;margin-bottom: 5%;}
   .table tr {
     background-color: transparent;
-    margin-top: 2%;
+    margin-top: 2%; 
+   
   }
   
   #table th {
@@ -38,9 +38,7 @@ h1 {
     color: white;
   }
   
-  .container {
-    margin-bottom: 5%;
-  }
+
   
   .btn {
     background-color: rgb(77, 200, 52);
@@ -120,5 +118,14 @@ h1 {
     padding: 0.2em 1.0em;
     color: white;
     cursor: pointer;
+  }
+  img{
+      width: 90%;
+      height: 25%;
+  }
+  video{
+      width:90%;
+      height: 25%;
+      margin-top: -20%;
   }
   
