--- a/testauthentification/Front/src/app/component/Userstories/userstories1/userstories1.component.css
+++ b/testauthentification/Front/src/app/component/Userstories/userstories1/userstories1.component.css
@@ -24,6 +24,7 @@ h1,p {
   .table th {
     border: 1px solid #2b2d31;
     padding: 8px;
+    text-align: center;
   }
   
   .table tr {
@@ -121,5 +122,9 @@ h1,p {
     padding: 0.2em 1.0em;
     color: white;
     cursor: pointer;
+  }
+  img{
+    width:100%;
+    height: 50%;
   }
   
