--- a/Jeu/public/views/preparerJeuEtape1.html
+++ b/Jeu/public/views/preparerJeuEtape1.html
@@ -16,7 +16,7 @@
     <section>
         <h1>PREPARER LE JEU</h1>
         <h2> 1 - Créez votre équipe </h2>
-
+        <!-- <p> <a href="/salon" data-link="/salon"> rejoindre un salon existant </a> </p> -->
         <article class="cadre">
             <div class="particadre2">
                 <h3>1 - Merci d’indiquer un nombre de joueurs</h3>
@@ -30,7 +30,7 @@
                 <p>Renseignez les informations sur votre équipe. Nous avons attribué des pseudo par défaut mais vous
                     pouvez les modifier à votre guise. Votre équipe aura un scrum master, un product owner et des
                     développeurs.</p>
-                <form action="" method="post" id="formJoueur"  style=" margin-right:10%;height: 21em; overflow-y: scroll;">
+                <form action="" method="post" id="formJoueur" class="formchoixjr">
                     
 
                    
