--- a/Jeu/public/assets/css/etape4Jeu.css
+++ b/Jeu/public/assets/css/etape4Jeu.css
@@ -70,3 +70,12 @@ body {
     background-image: url('https://static6.depositphotos.com/1036672/542/i/600/depositphotos_5427600-stock-photo-red-dice.jpg');
     background-size: cover;
 }
+.adjustementcase{
+    margin-left: 9%; margin-bottom:2%;padding-top: 2%;
+}
+.adjbox{
+    width:100%;height:14em;margin-right:2%;
+}
+.contCard{
+    display:flex; flex-direction:row; margin-left:25%;
+}
